Events: Every filter element goes into its own field to prevent layout issues in case when many filter elements are selected
TYPE: Bugfix
LINK: ogc-1219

--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -513,6 +513,14 @@ del {
 }
 
 /*
+    Description for a blank (uncolored) label
+*/
+.blank-label-description {
+    font-size: 1.0rem;
+    display: block;
+}
+
+/*
     Click through
 */
 .click-through {
